@@ -1,5 +1,8 @@
 2000-09-09  Jeff Freedman  <jeff@amy.nerble.net>
 
+	* gamewin.cc: Set palette for dungeons, also lighten palette for
+	gump mode.
+	* Set dimensions for ship's hold gump.
 	* objs.cc (Chunk_object_list): Dungeon rendering works, except
 	palette change still to be implemented.
 
